<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/etDateEdit"
        android:hint="@string/input_date"
        android:layout_width="170dp"
        android:layout_alignBaseline="@+id/etTimeEdit"
        android:layout_alignBottom="@+id/etTimeEdit"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:ems="10"
        android:id="@+id/etTimeEdit"
        android:hint="@string/time"
        android:layout_marginTop="94dp"
        android:layout_below="@+id/etTaskEdit"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences"
        android:ems="10"
        android:layout_marginTop="127dp"
        android:id="@+id/etTaskEdit"
        android:hint="@string/write_task"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:id="@+id/btnOk" />

    <Button
        android:text="@string/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btnOk"
        android:layout_toEndOf="@+id/btnOk"
        android:id="@+id/btnCancel" />

</RelativeLayout>